<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">


    <ImageView
        android:id="@+id/branding_iv"

        android:layout_width="85dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/branding_image"
        android:src="@drawable/ssu_emblem"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewMessage"
        app:layout_constraintEnd_toStartOf="@id/recyclerViewMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recyclerViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="академія пам`ятає"
        android:fontFamily="@font/montserrat_black"
        android:includeFontPadding="false"
        android:lineSpacingExtra="-15dp"
        android:layout_marginLeft="16dp"
        android:text="спецоперації\nслужби безпеки україни"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/branding_iv"
        app:layout_constraintStart_toEndOf="@id/branding_iv"
        app:layout_constraintTop_toTopOf="@id/branding_iv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWarriors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branding_iv"
        app:layout_constraintVertical_bias="0.0"
        app:spanCount="3"
        tools:listitem="@layout/warrior_item_full" />

    <ImageView
        android:id="@+id/arrow_up"
        android:layout_width="109dp"
        android:layout_height="105dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:contentDescription="@string/arrow_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvWarriors"
        app:srcCompat="@drawable/arrow_up" />

    <ImageView
        android:id="@+id/arrow_down"
        android:layout_width="109dp"
        android:layout_height="105dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:contentDescription="@string/arrow_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/arrow_down" />

    <ImageView
        android:id="@+id/bullet"
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="80dp"
        android:alpha="0.7"
        android:contentDescription="@string/bullet_hole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bullet_hole" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/rvWarriors"
        app:layout_constraintEnd_toEndOf="@+id/rvWarriors"
        app:layout_constraintStart_toStartOf="@+id/rvWarriors"
        app:layout_constraintTop_toTopOf="@+id/rvWarriors" />


</androidx.constraintlayout.widget.ConstraintLayout>